--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,11 +1,11 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=795CEA414C646DDBD6E75A83E5489807
-ProjectName=First Person BP Game Template
+ProjectName=The Realm
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-BuildConfiguration=PPBC_Shipping
+BuildConfiguration=PPBC_Development
 
